Address gap Issues in Header

--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@ body {
 .headline {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 36.875rem;
   width: 100vw;
   background-color: #1c1a19;
   color: #ff6b00;
+  position: relative;
 }
 
 .headline h1 {
@@ -297,7 +298,7 @@ button:hover {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding: 1rem 1.5rem 1.5rem 1.5rem;
+  padding: 1rem 1.5rem 5.5rem 1.5rem;
   background-repeat: no-repeat;
   background-image: url("./images/About-img.png");
   background-size: 46% 13%;
